<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- User facing, non translating Strings -->
    <string name="app_name" translatable="false">TripSit</string>
    <!-- Although these strings technically could be translated, we'd prefer to only receive emails in English right now -->
    <string name="email_header_prefix" translatable="false">[TripMobile] </string>
    <string name="email_bug_report_header" translatable="false">Bug Report</string>
    <string name="email_feature_header" translatable="false">Feature Suggestion</string>
    <string name="email_content_header" translatable="false">Content Update Request</string>
    <string name="email_say_hi_header" translatable="false">Social Message</string>

    <!-- #################################################### -->

    <!-- USER FACING STRINGS -->
    <!-- The following Strings are seen by the user and need translation and proper grammar -->
    <string name="logo">Tripsit Logo</string>
    <!-- Menu -->
    <string name="combinations">Combinations</string>
    <string name="factsheets">Factsheets</string>
    <string name="chat">Chat</string>
    <string name="tripsit">Tripsit</string>
    <string name="wiki">Wiki</string>
    <string name="settings">Settings</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>

    <!-- Chat -->
    <string name="chat_activity">Chat</string>

    <!-- Factsheets -->
    <string name="factsheets_default_search">Drug or alias</string>
    <string name="factsheets_intro">All data is taken from the tripbot API which can be found at http://tripbot.tripsit.me/factsheet. Please use this as rough guidelines, and check as many sources as possible before ingesting a substance.</string>
    <string name="search">Search</string>
    <string name="aliases">Aliases</string>
    <string name="summary">Summary</string>
    <string name="dose">Dose</string>
    <string name="effects">Effects</string>
    <string name="categories">Categories</string>
    <string name="timing">Timing</string>
    <string name="onset">"Onset: "</string>
    <string name="duration">"Duration: "</string>
    <string name="select_drug">"Select Drug: "</string>

    <!-- Combinations -->
    <string name="first_drug_input">Drug A</string>
    <string name="second_drug_input">Drug B</string>
    <string name="safe_synergy"><![CDATA[Low Risk & Synergy]]></string>
    <string name="safe_no_synergy"><![CDATA[Low Risk & No Synergy]]></string>
    <string name="safe_decrease"><![CDATA[Low Risk & Decrease]]></string>
    <string name="unsafe">Unsafe</string>
    <string name="serotonin_syndrome">Serotonin Syndrome</string>
    <string name="deadly">Deadly</string>
    <string name="caution">Caution</string>
    <!-- First and second arguments are the names of the drugs being combined -->
    <string name="caution_description">Be cautious if combining %1$s and %2$s.</string>
	<string name="safe_synergy_description">Combining %1$s and %2$s is generally low risk and provides synergistic effects. Be sure to lower the doses of each, as they will potentiate each other accordingly.</string>
    <string name="safe_no_synergy_description">Combining %1$s and %2$s is generally low risk, and doesn\'t provide any notable potentiated or decreased effects.</string>
    <string name="safe_decrease_description">Combining %1$s and %2$s is generally low risk, however one or more of the drugs will have decreased effects when they are combined.</string>
    <string name="unsafe_description">Combining %1$s and %2$s is unsafe and they should be taken with extreme caution, or ideally avoided entirely.</string>
    <string name="serotonin_syndrome_description">Combining %1$s and %2$s increases the risks of serotonin syndrome. Make sure that one of the drugs has completely left your system before taking the other.</string>
    <string name="deadly_description">Combining %1$s and %2$s can be deadly, and should be avoided entirely even in low dosages</string>

    <!-- Settings -->
    <string name="cache_freshness">Cache Freshness</string>
    <!-- Use 'getString(R.string.str_cache_content, getString(R.string.app_name)))' to retrieve the following String -->
    <string name="cache_freshness_description">%1$s automatically saves downloaded information to minimise your data usage. This setting lets you modify how long that data is kept before being downloaded again.</string>
    <string name="default_cache_days">0\ndays</string>
    <plurals name="days">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
    <string name="chat_channel">Chat channel</string>
    <string name="chat_channel_content">Modify the default channel you will connect to when using the \"Chat\" option from the main menu.</string>
    <string name="save">Save</string>
    <!-- Use 'getString(R.string.chat_channel_toast, "#channel")' to retrieve the following String -->
    <string name="chat_channel_toast">New default channel is now #%1$s</string>
    <!-- Use 'getString(R.string.invalid_channel, "#channel")' to retrieve the following String -->
    <string name="invalid_channel">#%1$s is not a valid channel name</string>
    <string name="chat_username_toast">New default username is now @%1$s</string>
    <!-- Use 'getString(R.string.invalid_channel, "#channel")' to retrieve the following String -->
    <string name="invalid_username">#%1$s is not a valid username</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>

    <!-- About -->
    <string name="about_header">About TripSit</string>
    <string name="about_content">This app is created by TripSit, an organisation which helps to provide factual information about drugs and how to reduce the harms involved in using them. We also have an active IRC (internet relay chat) network where we provide tripsitting services, harm reduction advice, and general chat.\nhttp://www.tripsit.me/</string>
    <string name="disclaimer_header">Disclaimer</string>
    <string name="disclaimer_content">Although we have a team dedicated to keeping the information on this app up to date, it is not always possible to provide 100% accurate information on the safety level of drugs. The information here should be used as guidelines only, and it is important to do your own research from multiple sources before ingesting a substance. We also strongly advise using a testing kit and scales to ensure you are taking the correct dosage. These can both be bought online for reasonable prices.</string>
    <string name="support_header">Support TripSit</string>
    <string name="support_content">TripSit is a completely free service run by volunteers. If you wish to help out, feel free to join the IRC, follow and share our content on social media, or make a donation to keep the servers running.</string>

    <!-- Contact -->
    <string name="contact_header">Contact Us</string>
    <string name="contact_content">Got any feedback about the app or any of the information we display? Or maybe you just want to say hello or ask a question? The links below will let you email us with any feedback, or you can always go back to the main menu and chat with us live on IRC. Join the #content channel for sources and more information on the content we provide.</string>
    <string name="bug_report">Report a bug</string>
    <string name="suggestions">Suggestions / Requests</string>
    <string name="content_issues">Issues with content / information</string>
    <string name="say_hi">Say hello!</string>
    <string name="bug_report_email">Please fill out the following information before sending this email.\n
\n
Version of android: \n
Device: \n
What happened before you saw the bug:\n
What is the bug? Does the app crash or function unusually: \n
If you\'re happy for us to contact you to request more details, please provide your IRC nick or email address: </string>

    <!-- Error handling -->
    <string name="operation_failed">Operation failed</string>
    <string name="retry">Retry</string>
    <string name="return_to_menu">Return to menu</string>
    <string name="ok">Ok</string>
    <string name="failed_download_drug_info">Failed to download drug information. Please check your internet connection and try again.</string>
    <string name="failed_parse_drug_info">"Failed parsing drug: "</string>
    <string name="failed_download_drug_names">Could not retrieve drug names from tripbot interface. Search may still work but autocomplete suggestions will not be present.</string>
    <string name="failed_parse_combinations">"Failed to parse combinations text, please report this error: "</string>
    <string name="failed_download_combinations">Failed to download combinations information. Please check your internet connection and try again.</string>
    <string name="failed_search_combo">Failed to find drug %1$s - try a category or check the factsheets for spelling.</string>
    <string name="failed_empty_drug">(empty)</string>
    <string name="error_email_client">You need to install an email client to use the email feature.</string>

    <!-- #################################################### -->

    <!-- HIDDEN STRINGS -->
    <!-- The following Strings should be hidden from the user, and therefore don't require any translation -->
    <string name="wiki_main_page" translatable="false">https://wiki.tripsit.me/wiki/Main_Page</string>
    <string name="wiki_domain" translatable="false">wiki.tripsit.me</string>
    <string name="bitcoin_url" translatable="false">bitcoin:1EDqf32gw73tc1WtgdT2FymfmDN4RyC9RN</string>
    <string name="donate_url" translatable="false">http://tripsit.me/support-tripsit</string>
    <!-- ID comes from https://graph.facebook.com/tripsitme -->
    <string name="facebook_app" translatable="false">fb://page/575082419170561</string>
    <string name="facebook_url" translatable="false">https://www.facebook.com/tripsitme</string>
    <string name="facebook_package" translatable="false">com.facebook.katana</string>
    <string name="reddit_url" translatable="false">http://www.reddit.com/r/tripsit</string>
    <string name="twitter_app" translatable="false">twitter://user?screen_name=teamtripsit</string>
    <string name="twitter_url" translatable="false">https://mobile.twitter.com/teamtripsit</string>
    <string name="shared_preferences_cache_freshness" translatable="false">CACHE.FRESHNESS</string>
    <string name="shared_preferences_chat_channel" translatable="false">CHAT.CHANNEL</string>
    <string name="shared_preferences_chat_username" translatable="false">CHAT.USERNAME</string>
    <string name="shared_preferences_theme" translatable="false">THEME</string>
    <string name="shared_preferences" translatable="false">me.tripsit.mobile.sharedpreferences</string>
    <string name="shared_preferences_url" translatable="false">URL.</string>
    <string name="shared_preferences_date" translatable="false">DATE.</string>
    <string name="txt_chat" translatable="false">drugs</string>
    <string name="str_channel_prefix" translatable="false">#</string>
    <string name="str_username_prefix" translatable="false">\@</string>
    <string name="mailto" translatable="false">mailto:</string>
    <string name="android_email_address" translatable="false">android@tripsit.me</string>
    <string name="content_email_address" translatable="false">content@tripsit.me</string>
    <string name="say_hi_email_address" translatable="false">tripsitters@tripsit.me</string>
    <string name="Placeholder">Placeholder</string>
    <string name="username_for_irc">Username for IRC</string>
    <string name="default_irc_username">Default IRC Username</string>
    <string name="irc_username_description">Save your username for future logins</string>

</resources>
