<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.tripsit.mobile.Contact"
    style="@style/BaseThemeWithBackground">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

        <TextView
            style="@style/LargeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/contact_header"
            android:id="@+id/txt_conctact_header" />

        <TextView
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/contact_content"
            android:id="@+id/txt_channel_content" />

        <LinearLayout
            android:layout_height="10dp"
            android:layout_width="fill_parent"/>

        <Button
            android:id="@+id/btn_bug_report"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="bugReport"
            android:text="@string/bug_report" />

        <LinearLayout
            android:layout_height="10dp"
            android:layout_width="fill_parent"/>

        <Button
            android:id="@+id/btn_suggestions"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="suggestions"
            android:text="@string/suggestions" />

        <LinearLayout
            android:layout_height="10dp"
            android:layout_width="fill_parent"/>

        <Button
            android:id="@+id/btn_content"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="content"
            android:text="@string/content_issues" />

        <LinearLayout
            android:layout_height="10dp"
            android:layout_width="fill_parent"/>

        <Button
            android:id="@+id/btn_say_hi"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sayHi"
            android:text="@string/say_hi" />
    </LinearLayout>

</ScrollView>
