<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_menuButtons"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    style="@style/BaseThemeWithBackground">

    <LinearLayout style="@style/MenuRow">

        <LinearLayout style="@style/MenuColumn">
            <ImageButton
                style="@style/MenuButton"
                android:id="@+id/btn_tripsitChannel"
                android:onClick="clickTripsit"
                android:background="@drawable/selector_trippy_ts"/>

            <TextView
                style="@style/MenuText"
                android:text="@string/tripsit" />
        </LinearLayout>

        <LinearLayout style="@style/MenuColumnBuffer" />

        <LinearLayout style="@style/MenuColumn">
            <ImageButton
                style="@style/MenuButton"
                android:id="@+id/btn_generalChat"
                android:onClick="clickGeneralChat"
                android:background="@drawable/selector_trippy_chat" />
            <TextView
                style="@style/MenuText"
                android:text="@string/chat"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/MenuRow">

        <LinearLayout style="@style/MenuColumn">
            <ImageButton
                style="@style/MenuButton"
                android:id="@+id/btn_factSheets"
                android:onClick="clickFactsheets"
                android:background="@drawable/selector_trippy_document" />

            <TextView
                style="@style/MenuText"
                android:text="@string/factsheets" />
        </LinearLayout>

        <LinearLayout style="@style/MenuColumnBuffer" />

        <LinearLayout style="@style/MenuColumn">
            <ImageButton
                style="@style/MenuButton"
                android:id="@+id/btn_combinations"
                android:onClick="clickCombinations"
                android:background="@drawable/selector_trippy_flasks" />
            <TextView
                style="@style/MenuText"
                android:text="@string/combinations"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/MenuRow">

        <LinearLayout style="@style/MenuColumn">
            <ImageButton
                style="@style/MenuButton"
                android:id="@+id/btn_wiki"
                android:onClick="clickWiki"
                android:background="@drawable/selector_trippy_globe" />

            <TextView
                style="@style/MenuText"
                android:text="@string/wiki" />
        </LinearLayout>

        <LinearLayout style="@style/MenuColumnBuffer" />

        <LinearLayout style="@style/MenuColumn">
            <ImageButton
                style="@style/MenuButton"
                android:id="@+id/btn_settings"
                android:onClick="clickSettings"
                android:background="@drawable/selector_trippy_gears" />
            <TextView
                style="@style/MenuText"
                android:text="@string/settings"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/MenuRow">

        <LinearLayout style="@style/MenuColumn">
            <ImageButton
                style="@style/MenuButton"
                android:id="@+id/btn_contact"
                android:onClick="clickContact"
                android:background="@drawable/selector_trippy_contact" />
            <TextView
                style="@style/MenuText"
                android:text="@string/contact"/>
        </LinearLayout>

        <LinearLayout style="@style/MenuColumnBuffer" />

        <LinearLayout style="@style/MenuColumn">
            <ImageButton
                style="@style/MenuButton"
                android:id="@+id/btn_about"
                android:onClick="clickAbout"
                android:background="@drawable/selector_trippy_about" />
            <TextView
                style="@style/MenuText"
                android:text="@string/about"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>