<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="${packageName}.${activityClass}"
    style="@style/BaseThemeWithBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context="${packageName}.${activityClass}" >

        <AutoCompleteTextView
            android:id="@+id/drugNameSearch"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:singleLine="true"
            android:textColor="?autoCompleteTextColor"
            android:text="@string/factsheets_default_search" >
            <requestFocus />
        </AutoCompleteTextView>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:onClick="clickSearch"
            android:text="@string/search" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/txt_drugDisclaimer"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:autoLink="all"
        android:text="@string/factsheets_intro" />

    <TextView
        android:id="@+id/txt_drugName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ExpandableListView
        android:id="@+id/exlist_drugInfo"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >
    </ExpandableListView>

</LinearLayout>