<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/input_container"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title"
            android:gravity="center_horizontal"
            android:text="@string/combinations"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <android.support.design.widget.TextInputLayout
            style="@style/DefaultEditText"
            android:id="@+id/first_drug_container"
            android:layout_below="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- style tag only needed due to textinputlayout wrapping -->
            <EditText
                style="@style/DefaultEditText"
                android:id="@+id/input_first_drug"
                android:hint="@string/first_drug_input"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            style="@style/DefaultEditText"
            android:id="@+id/second_drug_container"
            android:layout_below="@id/first_drug_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                style="@style/DefaultEditText"
                android:id="@+id/input_second_drug"
                android:hint="@string/second_drug_input"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_search"
            android:text="@string/search"
            android:layout_below="@id/second_drug_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_combinations"
        style="@style/LoadingSpinner"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/combo_container"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_combo_header"
                style="@style/CombinationsHeader" />
            <TextView
                android:id="@+id/txt_combo_content"
                style="@style/CombinationsContent" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
